--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ altgraph==0.17.5
 bottle==0.13.4
 packaging==25.0
 proxy_tools==0.1.0
+pycairo==1.29.0
+PyGObject==3.54.5
 pyinstaller==6.17.0
 pyinstaller-hooks-contrib==2025.11
 pywebview==6.1
